--- a/src/templates/base/2020/index.html
+++ b/src/templates/base/2020/index.html
@@ -70,11 +70,11 @@
       <h2>{{ self.intro_sub_title() }}</h2>
       <div>{{ self.mission() }}</div>
     </div>
-    <div class="intro-image-year-wrapper">
-      <div class="intro-image-year"></div>
-    </div>
     <div class="intro-image-wrapper">
-      <div class="intro-image"></div>
+      <svg viewBox="0 0 56 16">
+        <text x="8" y="15">{{ year }}</text>
+      </svg>      
+      <img src="/static/images/home-hero.png" alt="">
     </div>
   </section>
   <section class="methodology-container">
