--- a/src/templates/base/2019/index.html
+++ b/src/templates/base/2019/index.html
@@ -36,11 +36,11 @@
         {{ self.start_exploring() }}
       </a>
     </div>
-    <div class="intro-image-year-wrapper">
-      <div class="intro-image-year"></div>
-    </div>
     <div class="intro-image-wrapper">
-      <div class="intro-image"></div>
+      <svg viewBox="0 0 50 16">
+        <text x="7" y="15">{{ year }}</text>
+      </svg>      
+      <img src="/static/images/home-hero.png" alt="">
     </div>
   </section>
   {% include "%s/2019/featured_chapters.html" % lang %}
