Fix font size for logo year (#973)
* Fix font size for logo year

* Slight tweak for Firefox

--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -116,8 +116,12 @@ p {
 
 .intro-image-wrapper svg {
   position: relative;
-  top: 28px;
+  top: 25.5px;
   fill: #f7f779;
+}
+
+.intro-image-wrapper img {
+  position: relative;
 }
 
 /* IE11 hack */
