Correct Compression Featured Chapter quote (#1001)

--- a/src/templates/en/2019/featured_chapters.html
+++ b/src/templates/en/2019/featured_chapters.html
@@ -57,7 +57,7 @@
   {%- set featured_chapter_stats = {"stat1":"40%","label1":"Pages powered by a CMS","stat2":"74%","label2":"CMS sites that use WordPress","stat3":"1,232 KB","label3":"Median image KB loaded per desktop CMS page."} %}
 {%- elif featured_chapter == "compression" %}
   {%- set featured_chapter_name = "Compression" %}
-  {%- set featured_chapter_quote = "JavaScript is the most costly resource we send to browsers; having to be downloaded, parsed, compiled, and finally executed. Although browsers have significantly decreased the time it takes to parse and compile scripts, download and execution have become the most expensive stages when JavaScript is processed by a web page." %}
+  {%- set featured_chapter_quote = "HTTP compression is a technique that allows you to encode information using fewer bits than the original representation. When used for delivering web content, it enables web servers to reduce the amount of data transmitted to clients. This increases the efficiency of the client's available bandwidth, reduces page weight, and improves web performance." %}
   {%- set featured_chapter_stats = {"stat1":"38%","label1":"HTTP responses using text-based compression","stat2":"80%","label2":"Use of gzip compression","stat3":"56%","label3":"HTML responses not using compression"} %}
 {%- elif featured_chapter == "caching" %}
   {%- set featured_chapter_name = "Caching" %}
